--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -3,5 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.101.8</domain>
         <domain includeSubdomains="true">192.168.101.9</domain>
+        <domain includeSubdomains="true">192.168.18.205</domain>
+        <domain includeSubdomains="true">192.168.148.215</domain>
     </domain-config>
 </network-security-config>
