--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -7,6 +7,7 @@
         <domain includeSubdomains="true">192.168.101.9</domain>
         <domain includeSubdomains="true">192.168.18.205</domain>
         <domain includeSubdomains="true">192.168.148.215</domain>
+        <domain includeSubdomains="true">192.168.0.54</domain>
         <domain includeSubdomains="true">192.168.100.177</domain>
     </domain-config>
 </network-security-config>
