--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -9,6 +9,7 @@
         <domain includeSubdomains="true">192.168.148.215</domain>
         <domain includeSubdomains="true">192.168.0.54</domain>
         <domain includeSubdomains="true">192.168.100.177</domain>
+        <domain includeSubdomains="true">192.168.148.63</domain>
         <domain includeSubdomains="true">10.230.144.143</domain>
     </domain-config>
 </network-security-config>
