--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.101.2</domain>
+        <domain includeSubdomains="true">192.168.101.5</domain>
         <domain includeSubdomains="true">192.168.101.7</domain>
         <domain includeSubdomains="true">192.168.101.8</domain>
         <domain includeSubdomains="true">192.168.101.9</domain>
@@ -11,5 +12,6 @@
         <domain includeSubdomains="true">192.168.100.177</domain>
         <domain includeSubdomains="true">192.168.148.63</domain>
         <domain includeSubdomains="true">10.230.144.143</domain>
+        <domain includeSubdomains="true">192.168.149.145</domain>
     </domain-config>
 </network-security-config>
