--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.101.2</domain>
         <domain includeSubdomains="true">192.168.101.5</domain>
+        <domain includeSubdomains="true">192.168.101.6</domain>
         <domain includeSubdomains="true">192.168.101.7</domain>
         <domain includeSubdomains="true">192.168.101.8</domain>
         <domain includeSubdomains="true">192.168.101.9</domain>
