--- a/composeApp/src/androidMain/res/xml/network_security_config.xml
+++ b/composeApp/src/androidMain/res/xml/network_security_config.xml
@@ -17,5 +17,7 @@
         <domain includeSubdomains="true">192.168.149.145</domain>
         <domain includeSubdomains="true">10.50.10.235</domain>
         <domain includeSubdomains="true">10.50.10.134</domain>
+        <domain includeSubdomains="true">10.143.177.143</domain>
+        <domain includeSubdomains="true">192.168.100.137</domain>
     </domain-config>
 </network-security-config>
